# Ay_python_app

./: MODERNIZATION_AUDIT.md  README.md  Readme  about.html  ayblog.db  forms.py  main.py  models.py  pyproject.toml  requirements-utf8.txt  requirements.txt
.github/workflows/: daily-blog.yml
content/: generated_posts.json
scripts/: auto_publish.py  openclaw_codex_article_generator.py  openclaw_publish.sh
static/css/: style.css
templates/: about.html  contact.html  footer.html  forgot-password.html  generate-post.html  header.html  index.html  login.html  make-post.html  openclaw.html  post.html  register.html  reset-password.html
tests/: test_app.py  test_auto_publish.py  test_openclaw_codex_article_generator.py
