[project]
name = "ay-python-app"
version = "0.1.0"
description = "AyNcode Flask publishing site"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "beautifulsoup4",
    "certifi",
    "chardet",
    "click",
    "dominate",
    "email-validator",
    "Flask",
    "Flask-Bootstrap",
    "Flask-CKEditor",
    "Flask-Login",
    "Flask-Migrate",
    "Flask-SQLAlchemy",
    "Flask-WTF",
    "gunicorn",
    "idna",
    "itsdangerous",
    "Jinja2",
    "Mako",
    "MarkupSafe",
    "psycopg2-binary",
    "requests",
    "soupsieve",
    "SQLAlchemy",
    "typing_extensions",
    "urllib3",
    "visitor",
    "Werkzeug",
    "WTForms",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["main", "models", "forms", "db_create"]
